blog.css
body {
  font-family: 'Raleway', sans-serif;
  background-color: #fcffad;
  background-image: url("http://www.transparenttextures.com/patterns/skulls.png");
  font-size: 6em;
  color: black;
}

.container {
  margin-top: 150px;
  margin-bottom: 80px;
}

/******************* info links *******************/

.info {
  margin-left: auto;
  margin-right: auto;
  width: 200px;
  display: block;
  /*margin-top: -100px;*/
  opacity: 1;
}

.linkedIn img, .github img, .codewars img {
  height: 45px;
  width: 45px;
}

/****************** rotate animation **************/

.flip-container:hover .flipper {
  transform: rotateY(180deg);
}

.flip-container, .front, .back {
width: 250px;
height: 300px;
margin-right: auto;
margin-left: auto;
display: block;
cursor: pointer;
}

.flipper {
transition: 0.6s;
transform-style: preserve-3d;
position: relative;
}

.front, .back {
backface-visibility: hidden;
position: absolute;
top: 0;
left: 0;
}
.front img, .back img {
  width: 100%;
  height: 100%;
  border: 4px solid lightblue;
  border-radius: 16px;
}

/*.front {*/
/*background: url(https://tinycupcakesstore.files.wordpress.com/2015/03/cupcakes.jpg) 0 0 no-repeat;*/
/*z-index: 2;*/
/*}*/

.back {
transform: rotateY(180deg);
  /*background: url(http://davidwalsh.name/demo/dwflip.jpg);*/
  /*background-repeat: no-repeat;*/
/*z-index: 2;*/
}

.front .name {
font-size: 25px;
display: inline-block;
background: rgba(33, 33, 33, 0.9);
color: #f8f8f8;
font-family: Courier;
padding: 5px 10px;
border-radius: 5px;
bottom: 60px;
left: 25%;
position: absolute;
text-shadow: 0.1em 0.1em 0.05em #333;
transform: rotate(-20deg);
}

/****************** Summary style ****************/

.summary p {
  font-size: 20px;
  text-align: center;

}

.summary h2 {
  text-align: center;
}

